--- a/second/html/shows2.html
+++ b/second/html/shows2.html
@@ -14,6 +14,18 @@
             <Button>Добавить СП к накладной</Button>
         </p>
 
+         <p>
+            <Button>Редактировать накладную</Button>
+        </p>
+
+         <p>
+            <Button>Отправить накладную</Button>
+        </p>
+
+        <p>
+            <Button>Получить накладную</Button>
+        </p>
+
         <form action="showing.html">
             <p>
                 <Button>Вернуться к накладным</Button>
@@ -70,6 +82,9 @@
 
 
 <!--    </div>-->
+
+
+
 
 <script src="../js/nom.js"></script>
 </body>
