--- a/second/html/showing.html
+++ b/second/html/showing.html
@@ -14,9 +14,28 @@
     <header>МКАДД Накладные</header>
     <div class="about">
 
-            <p>
-                <Button>Создать накладную</Button>
-            </p>
+        <!--            <p>-->
+        <!--                <Button></Button>-->
+        <!--            </p>-->
+        <div class="top-nav">
+            <div class="about">
+                <p>
+                    <button id="openModalBtn">Создать накладную</button>
+                </p>
+            </div>
+        </div>
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                 <h>Создать новую накладную</h>
+
+
+                    <p align="left">1. </p>
+                    <p align="left">2. </p>
+
+            </div>
+        </div>
 
     </div>
 
@@ -38,26 +57,60 @@
     </div>
 
 
+<!--    <div id="output" class="table">-->
+<!--        <table id="waybillTable">-->
+
+<!--            <thead>-->
+<!--            <tr>-->
+<!--                <th rowspan="2">Номер накладной:</th>-->
+<!--                <th colspan="3">Отравление</th>-->
+<!--                <th colspan="3">Получение</th>-->
+<!--            <tr>-->
+<!--                <th>Дата отправления</th>-->
+<!--                <th>Цех отправления</th>-->
+<!--                <th>Отправитель</th>-->
+<!--                <th>Дата получения</th>-->
+<!--                <th>Цех получения</th>-->
+<!--                <th>Получатель</th>-->
+<!--            </tr>-->
+
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr class="content">-->
+
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
+
+<!--    </div>-->
 
     <div id="output" class="table">
-    <table id="waybillTable">
+        <div class="table-container">
+            <table id="waybillTable">
+                <thead>
+                <tr>
+                    <th rowspan="2">Номер накладной:</th>
+                    <th colspan="3">Отправление</th>
+                    <th colspan="3">Получение</th>
+                </tr>
+                <tr>
+                    <th>Дата отправления</th>
+                    <th>Цех отправления</th>
+                    <th>Отправитель</th>
+                    <th>Дата получения</th>
+                    <th>Цех получения</th>
+                    <th>Получатель</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr class="content">
 
-        <thead>
-        <tr>
-            <td>Номер накладной:</td>
-            <td colspan="3">Отправление:</td>
-            <td colspan="3">Получение:</td>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr class="content">
-
-        </tr>
-        </tbody>
-    </table>
-
-</div>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 
 
