--- a/second/html/showing.html
+++ b/second/html/showing.html
@@ -26,13 +26,13 @@
                 </form>
             </div>
 
-            <div class="about">
-                <select style=text-align:right >
+            <div class = "select">
+                <select style=text-align:right>
                     <option>Цех</option>
-                    <option>4</option>
-                    <option>518</option>
-                    <option>343</option>
+                    <option>004</option>
                     <option>129</option>
+                    <option>343</option>
+                    <option>518</option>
                 </select>
             </div>
         </div>
