--- a/second/html/showing.html
+++ b/second/html/showing.html
@@ -56,35 +56,32 @@
 
     </div>
 
-    <div id="output" class="table">
-        <div class="table-container">
-            <table id="waybillTable" style="border-collapse: collapse;">
-                <thead>
+   <div id="output" class="table">
+    <div class="table-container">
+        <table id="waybillTable">
+            <thead>
                 <tr>
                     <th data-type="number" rowspan="2">Номер накладной:</th>
                     <th colspan="3">Отправление</th>
                     <th colspan="3">Получение</th>
                 </tr>
                 <tr>
-                    <th data-type="data">Дата</th>
+                    <th data-type="date">Дата</th>
                     <th data-type="number">Цех</th>
                     <th data-type="string">Ответственный</th>
-                    <th data-type="data">Дата</th>
+                    <th data-type="date">Дата</th>
                     <th data-type="number">Цех</th>
                     <th data-type="string">Ответственный</th>
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 <tr class="content">
 
                 </tr>
-                </tbody>
-            </table>
-        </div>
+            </tbody>
+        </table>
     </div>
-
 </div>
-
 
 
 <div class="pagination">
