--- a/second/html/shows2.html
+++ b/second/html/shows2.html
@@ -7,74 +7,72 @@
     <link rel="icon" type="image/png" href="../img/icon1.png">
 </head>
 <body>
+
+<div class="about">
+
+    <p>
+        <Button>Добавить СП к накладной</Button>
+    </p>
+
+    <p>
+        <Button>Редактировать накладную</Button>
+    </p>
+
+    <p>
+        <button id="deleteButton">Удалить накладную</button>
+    </p>
+
+    <p>
+        <Button>Отправить накладную</Button>
+    </p>
+
+    <p>
+        <Button>Получить накладную</Button>
+    </p>
+
+    <form action="showing.html" style="display: inline;">
+        <p>
+            <Button>Вернуться к накладным</Button>
+        </p>
+    </form>
+</div>
+
 <div class="top-nav">
     <div class="about">
         <header><p>Номер накладной:</p></header>
         <header><p class='waybillNum' style="text-indent: 15px;"></p></header>
         <header><p style="text-indent: 15px; ">Время отправления:</p></header>
         <header><p class='waybillSenDate' style="text-indent: 15px; "></p></header>
-        <header><p style="text-indent: 15px; ">Время получения:</p></header>
-        <header><p class='waybillRecDate' style="text-indent: 15px; "></p></header>
+        <header><p style="text-indent: 15px; ">Цех отправления:</p></header>
+        <header><p class='waybillDepsFrom' style="text-indent: 15px; "></p></header>
+        <header><p style="text-indent: 15px; ">Отправитель:</p></header>
+        <header><p class='waybillSending' style="text-indent: 15px; "></p></header>
+
 
     </div>
     <div class="about">
 
-        <p>
-            <Button>Добавить СП к накладной</Button>
-        </p>
-
-         <p>
-            <Button>Редактировать накладную</Button>
-        </p>
-
-        <p><button id="deleteButton">Удалить накладную</button></p>
-
-         <p>
-            <Button>Отправить накладную</Button>
-        </p>
-
-        <p>
-            <Button>Получить накладную</Button>
-        </p>
-
-        <form action="showing.html" style="display: inline;">
-            <p><Button>Вернуться к накладным</Button></p>
-        </form>
+        <header><p>Время получения:</p></header>
+        <header><p class='waybillRecDate' style="text-indent: 15px; "></p></header>
+        <header><p style="text-indent: 15px; ">Цех получения:</p></header>
+        <header><p class='waybillDeppTo' style="text-indent: 15px; "></p></header>
+        <header><p style="text-indent: 15px; ">Получатель:</p></header>
+        <header><p class='waybillReceiver' style="text-indent: 15px; "></p></header>
     </div>
-
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <p>Вы уверены, что хотите удалить накладную?</p>
-        <button id="confirmDeleteBtn">Да</button>
-        <button id="cancelDeleteBtn">Отмена</button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <p>Вы уверены, что хотите удалить накладную?</p>
+            <button id="confirmDeleteBtn">Да</button>
+            <button id="cancelDeleteBtn">Отмена</button>
+        </div>
     </div>
-</div>
 
 </div>
 
 <!--<div class="tables">-->
 
-<div id="out2" class="table">
-    <table id="nomTable">
-        <thead>
-            <tr>
-                <th>Обозначение:</th>
-                <th>Наименование:</th>
-                <th>Номер заказа:</th>
-                <th>Количество деталей:</th>
-                <th>Количество заготовок:</th>
-                <th>Количество образцов:</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="content">
 
-            </tr>
-        </tbody>
-    </table>
-</div>
-
-<div id="out" class="table" style="display: none;">
+<div id="out2" class="table" style="display: none;">
     <table id="passportTable">
         <thead>
             <tr>
@@ -87,19 +85,28 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="content">
 
-            </tr>
         </tbody>
     </table>
 </div>
 
+<div id="out" class="table">
+    <table id="nomTable">
+        <thead>
+            <tr>
+                <th>Обозначение:</th>
+                <th>Наименование:</th>
+                <th>Номер заказа:</th>
+                <th>Количество деталей:</th>
+                <th>Количество заготовок:</th>
+                <th>Количество образцов:</th>
+            </tr>
+        </thead>
+        <tbody>
 
-
-
-
-<!--    </div>-->
-
+        </tbody>
+    </table>
+</div>
 
 
 
