--- a/second/html/showing.html
+++ b/second/html/showing.html
@@ -21,13 +21,13 @@
             </p>
 
             <div>
-                <form action="" method="get" style=text-align:right>
+                <form action="" method="get" style="text-align:right">
                     <input name="s" placeholder="Искать здесь..." type="search">
                 </form>
             </div>
 
-            <div class = "select">
-                <select style=text-align:right>
+            <div class="select">
+                <select id="waybillDepFrom" style="text-align:right">
                     <option>Цех</option>
                     <option>004</option>
                     <option>129</option>
@@ -37,29 +37,32 @@
             </div>
         </div>
 
-
-        <div id="modal" class="modal">
+        <div id="addWaybillModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2>Заполните информацию для создания накладной:</h2>
 
                 <form id="infoForm" action="#">
+                    <label for="waybillDep">Цех получения:</label>
+                    <input type="number" id="waybillDep" name="waybillDep">
 
-                    <label for="destination">Цех получения:</label>
-                    <input type="number" id="destination" name="destination">
+                    <label for="waybillID">Номер накладной:</label>
+                    <input type="number" id="waybillID" name="waybillID">
 
+                    <label for="waybillNum">Номер заказа:</label>
+                    <input type="number" id="waybillNum" name="waybillNum">
 
-                    <button type="submit">Сохранить</button>
+                    <button id="saveWaybillBtn" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
 
     </div>
 
-   <div id="output" class="table">
-    <div class="table-container">
-        <table id="waybillTable">
-            <thead>
+    <div id="output" class="table">
+        <div class="table-container">
+            <table id="waybillTable">
+                <thead>
                 <tr>
                     <th data-type="number" rowspan="2">Номер накладной:</th>
                     <th colspan="3">Отправление</th>
@@ -73,31 +76,31 @@
                     <th data-type="number">Цех</th>
                     <th data-type="string">Ответственный</th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 <tr class="content">
 
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 
 
-<div class="pagination">
+    <div class="pagination">
 
-    <ul>
-<!--        <li class = "btn prev"><span><i class = "fas fa-angle-left"></i>Назад</span></li>-->
-<!--        <li class = "numb active"><span>1</span></li>-->
-<!--        <li class = "numb"><span>2</span></li>-->
-<!--        <li class = "dots"><span>...</span></li>-->
-<!--        <li class = "numb"><span>4</span></li>-->
-<!--        <li class = "numb"><span>5</span></li>-->
-<!--        <li class = "dots"><span>...</span></li>-->
-<!--        <li class = "numb"><span>7</span></li>-->
-<!--        <li class = "btn next"><span>Вперёд<i class = "fas fa-angle-right"></i></span></li>-->
-    </ul>
-</div>
-<script src="../js/act.js"></script>
+        <ul>
+            <!--        <li class = "btn prev"><span><i class = "fas fa-angle-left"></i>Назад</span></li>-->
+            <!--        <li class = "numb active"><span>1</span></li>-->
+            <!--        <li class = "numb"><span>2</span></li>-->
+            <!--        <li class = "dots"><span>...</span></li>-->
+            <!--        <li class = "numb"><span>4</span></li>-->
+            <!--        <li class = "numb"><span>5</span></li>-->
+            <!--        <li class = "dots"><span>...</span></li>-->
+            <!--        <li class = "numb"><span>7</span></li>-->
+            <!--        <li class = "btn next"><span>Вперёд<i class = "fas fa-angle-right"></i></span></li>-->
+        </ul>
+    </div>
+    <script src="../js/act.js"></script>
 </body>
 </html>
