--- a/second/html/shows2.html
+++ b/second/html/shows2.html
@@ -5,13 +5,48 @@
     <title>Номенклатура и паспорт</title>
     <link rel="stylesheet" href="../css/passnom.css">
     <link rel="icon" type="image/png" href="../img/icon1.png">
+    <!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>-->
+    <!--    <style>-->
+    <!--        .detail-row {-->
+    <!--            display: none;-->
+    <!--        }-->
+    <!--    </style>-->
 </head>
 <body>
 
 <div class="about">
 
     <p>
-        <Button>Добавить СП к накладной</Button>
+        <button id="addPassportBtn">Добавить СП к накладной</button>
+
+    <div id="addPassportModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form id="passportForm">
+                <label for="waybillID">ID накладной:</label>
+                <input type="text" id="waybillID" name="waybillID" disabled>
+                <label for="passportID">ID паспорта:</label>
+                <input type="number" id="passportID" name="passportID">
+                <label for="nomenclatureID">ID номенклатуры:</label>
+                <input type="number" id="nomenclatureID" name="nomenclatureID">
+                <label for="passportNum">Номер паспорта:</label>
+                <input type="number" id="passportNum" name="passportNum">
+                <label for="passportDep">Департамент паспорта:</label>
+                <input type="number" id="passportDep" name="passportDep">
+                <label for="passportYear">Год паспорта:</label>
+                <input type="number" id="passportYear" name="passportYear">
+                <label for="quantityDetails">Количество деталей:</label>
+                <input type="number" id="quantityDetails" name="quantityDetails">
+                <label for="quantityWorkpieces">Количество заготовок:</label>
+                <input type="number" id="quantityWorkpieces" name="quantityWorkpieces">
+                <label for="quantitySamples">Количество образцов:</label>
+                <input type="number" id="quantitySamples" name="quantitySamples">
+                <button type="button" id="savePassportBtn">Сохранить</button>
+            </form>
+        </div>
+    </div>
+
     </p>
 
     <p>
@@ -23,11 +58,31 @@
     </p>
 
     <p>
-        <Button>Отправить накладную</Button>
+        <button id="sendWaybillBtn">Отправить накладную</button>
+
+        <!-- Модальное окно -->
+    <div id="SenderModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <label for="receiverName">Имя отправителя:</label>
+            <input type="text" id="senderName" name="senderName">
+            <button id="saveSenderBtn">Сохранить</button>
+        </div>
+    </div>
     </p>
 
     <p>
-        <Button>Получить накладную</Button>
+        <button id="getWaybillBtn">Получить накладную</button>
+
+        <!-- Модальное окно -->
+    <div id="receiverModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <label for="receiverName">Имя получателя:</label>
+            <input type="text" id="receiverName" name="receiverName">
+            <button id="saveReceiverBtn">Сохранить</button>
+        </div>
+    </div>
     </p>
 
     <form action="showing.html" style="display: inline;">
@@ -91,6 +146,7 @@
     </div>
 </div>
 
+
 <!--<div id="modal" class="modal">-->
 <!--  <div class="modal-content">-->
 <!--    <span class="close">&times;</span>-->
@@ -109,43 +165,101 @@
 <div id="out" class="table">
     <table id="nomTable">
         <thead>
-            <tr>
-                <th>Обозначение:</th>
-                <th>Наименование:</th>
-                <th>Номер заказа:</th>
-                <th>Количество деталей:</th>
-                <th>Количество заготовок:</th>
-                <th>Количество образцов:</th>
-            </tr>
+        <tr>
+            <th>Обозначение:</th>
+            <th>Наименование:</th>
+            <th>Номер заказа:</th>
+            <th>Количество деталей:</th>
+            <th>Количество заготовок:</th>
+            <th>Количество образцов:</th>
+        </tr>
         </thead>
         <tbody>
-            <tr>
-                <td colspan="6">
-                    <table id="passportTable" class="inner-table">
-                        <thead>
-                            <tr>
-                                <th>Номер паспорта:</th>
-                                <th>Цех:</th>
-                                <th>Год:</th>
-                                <th>Количество деталей:</th>
-                                <th>Количество заготовок:</th>
-                                <th>Количество образцов:</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Здесь будут строки таблицы passportTable -->
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-            <!-- Здесь будут строки таблицы nomTable -->
+        <!-- Здесь будут строки таблицы nomTable -->
+        </tbody>
+    </table>
+    <table id="passportTable" class="hidden">
+        <thead>
+        <tr>
+            <th>Номер паспорта:</th>
+            <th>Цех:</th>
+            <th>Год:</th>
+            <th>Количество деталей:</th>
+            <th>Количество заготовок:</th>
+            <th>Количество образцов:</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Здесь будут строки таблицы passportTable -->
         </tbody>
     </table>
 </div>
 
-    <script src="../js/nom.js">
+<!--<div id="out" class="container mt-5">-->
+<!--    <table id="nomTable" class="table">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th>Обозначение:</th>-->
+<!--            <th>Наименование:</th>-->
+<!--            <th>Номер заказа:</th>-->
+<!--            <th>Количество деталей:</th>-->
+<!--            <th>Количество заготовок:</th>-->
+<!--            <th>Количество образцов:</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr class="main-row">-->
+
+<!--        </tr>-->
+<!--        <tr class="detail-row">-->
+<!--            <td colspan="6">-->
+<!--                <table class="table">-->
+<!--                    <thead>-->
+<!--                    <tr>-->
+<!--                        <th>Номер паспорта:</th>-->
+<!--                        <th>Цех:</th>-->
+<!--                        <th>Год:</th>-->
+<!--                        <th>Количество деталей:</th>-->
+<!--                        <th>Количество заготовок:</th>-->
+<!--                        <th>Количество образцов:</th>-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+<!--                    <tbody>-->
+<!--                    <tr>-->
+
+<!--                    </tr>-->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--        &lt;!&ndash; Можно добавить больше строк аналогичным образом &ndash;&gt;-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--</div>-->
+
+<!--<script>-->
+<!--    document.addEventListener('DOMContentLoaded', function () {-->
+<!--        const mainRows = document.querySelectorAll('.main-row');-->
+
+<!--        mainRows.forEach(row => {-->
+<!--            row.addEventListener('click', function () {-->
+<!--                const detailRow = this.nextElementSibling;-->
+<!--                if (detailRow.classList.contains('detail-row')) {-->
+<!--                    if (detailRow.style.display === 'none' || detailRow.style.display === '') {-->
+<!--                        detailRow.style.display = 'table-row';-->
+<!--                    } else {-->
+<!--                        detailRow.style.display = 'none';-->
+<!--                    }-->
+<!--                }-->
+<!--            });-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 
 
-    </script>
+<script src="../js/nom.js">
+
+
+</script>
 </body>
 </html>
