--- a/second/html/showing.html
+++ b/second/html/showing.html
@@ -59,48 +59,50 @@
 
     </div>
 
-    <div id="output" class="table">
-        <div class="table-container">
-            <table id="waybillTable">
-                <thead>
-                <tr>
-                    <th data-type="number" rowspan="2">Номер накладной:</th>
-                    <th colspan="3">Отправление</th>
-                    <th colspan="3">Получение</th>
-                </tr>
-                <tr>
-                    <th data-type="date">Дата</th>
-                    <th data-type="number">Цех</th>
-                    <th data-type="string">Ответственный</th>
-                    <th data-type="date">Дата</th>
-                    <th data-type="number">Цех</th>
-                    <th data-type="string">Ответственный</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr class="content">
-
-                </tr>
-                </tbody>
-            </table>
-        </div>
+</div>
+<p>
+<div id="output" class="table">
+    <div class="table-container">
+        <table id="waybillTable">
+            <thead>
+            <tr>
+                <th data-type="number" rowspan="2">Номер накладной:</th>
+                <th colspan="3">Отправление</th>
+                <th colspan="3">Получение</th>
+            </tr>
+            <tr>
+                <th data-type="date">Дата</th>
+                <th data-type="number" class="sortable">Цех</th>
+                <th data-type="string">Ответственный</th>
+                <th data-type="date">Дата</th>
+                <th data-type="number" class="sortable">Цех</th>
+                <th data-type="string">Ответственный</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="content">
+                <!— Здесь будут строки с данными —>
+            </tr>
+            </tbody>
+        </table>
     </div>
+</div>
 
 
-    <div class="pagination">
+<div class="pagination">
 
-        <ul>
-            <!--        <li class = "btn prev"><span><i class = "fas fa-angle-left"></i>Назад</span></li>-->
-            <!--        <li class = "numb active"><span>1</span></li>-->
-            <!--        <li class = "numb"><span>2</span></li>-->
-            <!--        <li class = "dots"><span>...</span></li>-->
-            <!--        <li class = "numb"><span>4</span></li>-->
-            <!--        <li class = "numb"><span>5</span></li>-->
-            <!--        <li class = "dots"><span>...</span></li>-->
-            <!--        <li class = "numb"><span>7</span></li>-->
-            <!--        <li class = "btn next"><span>Вперёд<i class = "fas fa-angle-right"></i></span></li>-->
-        </ul>
-    </div>
-    <script src="../js/act.js"></script>
+    <ul>
+        <!--        <li class = "btn prev"><span><i class = "fas fa-angle-left"></i>Назад</span></li>-->
+        <!--        <li class = "numb active"><span>1</span></li>-->
+        <!--        <li class = "numb"><span>2</span></li>-->
+        <!--        <li class = "dots"><span>...</span></li>-->
+        <!--        <li class = "numb"><span>4</span></li>-->
+        <!--        <li class = "numb"><span>5</span></li>-->
+        <!--        <li class = "dots"><span>...</span></li>-->
+        <!--        <li class = "numb"><span>7</span></li>-->
+        <!--        <li class = "btn next"><span>Вперёд<i class = "fas fa-angle-right"></i></span></li>-->
+    </ul>
+</div>
+<script src="../js/act.js"></script>
 </body>
 </html>
