--- a/second/html/shows2.html
+++ b/second/html/shows2.html
@@ -5,13 +5,7 @@
     <title>Номенклатура и паспорт</title>
     <link rel="stylesheet" href="../css/passnom.css">
     <link rel="icon" type="image/png" href="../img/icon1.png">
-    <!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
-    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>-->
-    <!--    <style>-->
-    <!--        .detail-row {-->
-    <!--            display: none;-->
-    <!--        }-->
-    <!--    </style>-->
+   
 </head>
 <body>
 
@@ -190,71 +184,11 @@
         </tr>
         </thead>
         <tbody>
-        <!-- Здесь будут строки таблицы passportTable -->
+<!--       Строки таблицы-->
         </tbody>
     </table>
 </div>
 
-<!--<div id="out" class="container mt-5">-->
-<!--    <table id="nomTable" class="table">-->
-<!--        <thead>-->
-<!--        <tr>-->
-<!--            <th>Обозначение:</th>-->
-<!--            <th>Наименование:</th>-->
-<!--            <th>Номер заказа:</th>-->
-<!--            <th>Количество деталей:</th>-->
-<!--            <th>Количество заготовок:</th>-->
-<!--            <th>Количество образцов:</th>-->
-<!--        </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--        <tr class="main-row">-->
-
-<!--        </tr>-->
-<!--        <tr class="detail-row">-->
-<!--            <td colspan="6">-->
-<!--                <table class="table">-->
-<!--                    <thead>-->
-<!--                    <tr>-->
-<!--                        <th>Номер паспорта:</th>-->
-<!--                        <th>Цех:</th>-->
-<!--                        <th>Год:</th>-->
-<!--                        <th>Количество деталей:</th>-->
-<!--                        <th>Количество заготовок:</th>-->
-<!--                        <th>Количество образцов:</th>-->
-<!--                    </tr>-->
-<!--                    </thead>-->
-<!--                    <tbody>-->
-<!--                    <tr>-->
-
-<!--                    </tr>-->
-<!--                    </tbody>-->
-<!--                </table>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--        &lt;!&ndash; Можно добавить больше строк аналогичным образом &ndash;&gt;-->
-<!--        </tbody>-->
-<!--    </table>-->
-<!--</div>-->
-
-<!--<script>-->
-<!--    document.addEventListener('DOMContentLoaded', function () {-->
-<!--        const mainRows = document.querySelectorAll('.main-row');-->
-
-<!--        mainRows.forEach(row => {-->
-<!--            row.addEventListener('click', function () {-->
-<!--                const detailRow = this.nextElementSibling;-->
-<!--                if (detailRow.classList.contains('detail-row')) {-->
-<!--                    if (detailRow.style.display === 'none' || detailRow.style.display === '') {-->
-<!--                        detailRow.style.display = 'table-row';-->
-<!--                    } else {-->
-<!--                        detailRow.style.display = 'none';-->
-<!--                    }-->
-<!--                }-->
-<!--            });-->
-<!--        });-->
-<!--    });-->
-<!--</script>-->
 
 
 <script src="../js/nom.js">
